[package]
name = "plonk"
version = "0.8.2"
authors = [
    "Kevaundray Wedderburn <kevtheappdev@gmail.com>",
    "Luke Pearson <luke@polychain.capital>",
    "Jules De Smit <jules@aleo.org>",
    "Joshua Fitzgerald <joshua@heliax.dev>",
    "Carlos Perez <carlos.perezbaro@iohk.io>",
    "David Nevado <david.nevado@iohk.io>"
]
readme = "README.md"
repository = "https://github.com/zk-garage/plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories = ["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "plonk-core",
    "plonk-hashing",
]

[dependencies]
plonk-core = { path = "plonk-core" }
plonk-hashing = { path = "plonk-hashing" }

[dev-dependencies]
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
ark-ed-on-bls12-377 = "0.3"
ark-ed-on-bls12-381 = "0.3"
criterion = "0.3"
paste = "1.0.6"
rand = "0.8.0"
tempdir = "0.3"

[[bench]]
name = "plonk"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1
