[package]
name = "ark-plonk"
version = "0.8.2"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>",
           "Luke Pearson <luke@polychain.capital>",
           "Jules De Smit <jules@aleo.org>",
           "Joshua Fitzgerald <joshua@heliax.dev>",
           "Carlos Perez <carlos.perezbaro@iohk.io>",
           "David Nevado <david.nevado@iohk.io>"]
readme = "README.md"
repository = "https://github.com/rust-zkp/ark-plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories =["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]
license = "MPL-2.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.3"
ark-std = { version = "0.3", features = ["std"] }
ark-ec = { version = "0.3", features = ["std"] }
ark-ff = { version = "0.3", features = ["std"] }
ark-poly = "0.3"
ark-poly-commit = "0.3"
ark-serialize = { version = "0.3", features = ["derive"] }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
hashbrown = { version = "0.11.2", default-features = false, features = ["ahash"] }
itertools = { version = "0.10.1", default-features = false }
merlin = { version = "3.0", default-features = false }
num-traits = "0.2.14"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
blake2 = "0.9"

[dev-dependencies]
ark-sponge = "0.3"
ark-std = "0.3"
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
ark-ed-on-bls12-377 = "0.3"
ark-ed-on-bls12-381 = "0.3"
criterion = "0.3"
paste = "1.0.6"
rand = "0.8.0"
tempdir = "0.3"
ark-vesta = "0.3"


[features]
default = [
    "rand/std",
    "itertools/default",
    "parallel",
    "asm"
]
parallel = [
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-ec/parallel",
    "ark-poly-commit/parallel"
]
asm = [
    "ark-ff/asm"
]
trace = []
trace-print = ["trace"]

[[bench]]
name = "plonk"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1
