[package]
name = "plonk"
version = "0.8.2"
authors = [
    "Kevaundray Wedderburn <kevtheappdev@gmail.com>",
    "Luke Pearson <luke@polychain.capital>",
    "Jules De Smit <jules@aleo.org>",
    "Joshua Fitzgerald <joshua@heliax.dev>",
    "Carlos Perez <carlos.perezbaro@iohk.io>",
    "David Nevado <david.nevado@iohk.io>",
    "Zhenfei Zhang <zhenfei.zhang@hotmail.com>"
]
readme = "README.md"
repository = "https://github.com/zk-garage/plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories =["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
license = "MPL"
edition = "2021"
include = ["src", "LICENSE-*", "README.md"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[workspace]
resolver = "2"
members = [
    "plonk-core",
    "plonk-hashing",
]

[dependencies]
plonk-core = { path = "plonk-core" }
plonk-hashing = { path = "plonk-hashing" }

[dev-dependencies]
ark-ff = "0.3"
ark-sponge = "0.3"
ark-std = "0.3"
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-ed-on-bls12-377 = "0.3"
ark-ed-on-bls12-381 = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
blake2 = "0.9"
criterion = "0.3"
derivative = "2.2.0"
paste = "1.0.6"
rand_core = {version = "0.6", default-features=false, features = ["getrandom"] }
tempdir = "0.3"
ark-vesta = "0.3"



[[bench]]
name = "plonk"
harness = false

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
rpath = false
