[package]
name = "plonk-core"
version = "0.8.2"
authors = ["ZK-GARAGE Authors"]
readme = "README.md"
repository = "https://github.com/zk-garage/plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories = ["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ark-ec = { version = "0.3", features = ["std"] }
ark-ff = { version = "0.3", features = ["std"] }
ark-poly = "0.3"
ark-poly-commit = "0.3"
ark-serialize = { version = "0.3", features = ["derive"] }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
hashbrown = { version = "0.11.2", default-features = false, features = ["ahash"] }
itertools = { version = "0.10.1", default-features = false }
merlin = { version = "3.0", default-features = false }
num-traits = "0.2.14"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

[features]
default = [
    "rand_core/std",
    "itertools/default",
    "parallel",
    "asm"
]
parallel = [
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-ec/parallel",
    "ark-poly-commit/parallel"
]
asm = [
    "ark-ff/asm"
]
trace = []
trace-print = ["trace"]

