[package]
name = "plonk-hashing"
version = "0.8.2"
authors = ["ZK-GARAGE Authors"]
readme = "README.md"
repository = "https://github.com/zk-garage/plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories = ["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
plonk-core = { path = "../plonk-core" }

